--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,9 +72,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/tx.png
+    - images/char.png
+    - images/scene.png
     - images/bg.jpg
     - images/placeholder.jpg
-    - images/tx.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
