--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_launcher_icons: 
   shared_preferences: ^2.0.20
   google_fonts: ^4.0.3
+  flutter_animation_progress_bar: ^2.3.1
+  timer_builder: ^2.0.0 
 
 flutter_icons:
   image_path: "images/miku.png"
